# onnx-phonics

./: README.md  SECURITY.md  onnx-test.py  pyproject.toml  squat_model.onnx
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
