[tool.poetry]
name = "onnx-phonics"
version = "0.1.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
readme = "README.md"
packages = [
    { include = "onnx_phonics" },
]

[tool.poetry.dependencies]
python = "^3.10"
onnx = "^1.15.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest = "^8.0.0"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "onnx-phonics"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
